Huddle Landing Page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <img src="./images/logo.svg" alt="Logo">
     </header>
     <main>
-      <img src="./images/illustration-mockups.svg" alt="Illustration">
+      <div class="image">
+        <img src="./images/illustration-mockups.svg" alt="Illustration">
+      </div>
       <div class="content">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>
@@ -30,9 +32,9 @@
     </main>
     <footer>
       <div class="icon">
-        <i class="fab fa-facebook-f fa-border"></i>
-        <i class="fab fa-twitter fa-border"></i>
-        <i class="fab fa-instagram fa-border"></i>
+        <a class="fab fa-facebook-f fa-border"></a>
+        <a class="fab fa-twitter fa-border"></a>
+        <a class="fab fa-instagram fa-border"></a>
       </div> 
       <!-- <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
